fix(1.16.5): Fix build